# boston-liquor-license-tracker

./: .gitignore  CONTRIBUTING.md  DATA_DICTIONARY.md  Extract_Liquor_Licenses.py  README.md  TESTS.md  package.json
.github/workflows/: get-next-meeting-date.yml  lint.yml  liquor-license-applicant-pipeline.yml  py-lint.yml  scrape_license_board.yml  test-client.yml  test-voting-minutes.yml  validate-license-data.yml
client/: 404.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx  pyproject.toml  setupHashHistoryScrollRestoration.ts
client/src/data/: extra-work-data.ts  last_processed_date.json  licenses.json  licenses.json.bak  next-meeting-date.json
client/src/i18n/: I18n.tsx  i18n-config.ts  (+2 more)
data/: lastProcessedDate.json  last_processed_date.json
scraper/scrape/: .gitignore  README.md  scrape_license_board.yml
scraper/transform/: .gitignore  Makefile  README.md  file_index.json  pyproject.toml  run_audit.sh  run_fix.sh  run_pipeline.sh  viewer.html
scraper/transform/app/: cli.py  licenses_to_excel.py  main.py  stats_report.py
scraper/transform/app/pipeline/: extract_board_voted.py  extract_license_text.py  extract_text_json.py  pipeline.py
scraper/transform/app/pipeline/extraction/: category.py
scraper/transform/app/violation_plugins/post_hearing/: violation_2020-09-17.py  violation_2022-06-30.py  violation_2023-08-17.py  violation_2024-09-26.py  violation_Easton-Boston.py
scraper/transform/app/violation_plugins/post_text/: violation_2020-09-10.py  violation_2021-02-04.py  violation_2021-09-30.py  violation_2022-09-29.py  violation_2024-03-07.py  violation_2025-05-01.py  violation_2025-06-26.py
scraper/transform/notebooks/: address_normilize.ipynb  address_test.csv  eda_license_json.ipynb
scraper/transform/planning/: GEMINI.md  define_schema_plan.md  extract_json_plan.md  license_chunk_plan.md
scraper/transform/schemas/: license_schema.json
scraper/transform/scripts/: build_file_index.py  extract_hearings.py  extract_license_chunks.py  extract_to_json.py
scripts/: .gitignore  boston_address_parser.py  conftest.py  data.json  eslint.config.js  extract_entity.py  extract_result_entities.py  getVotingMinutes.js  getVotingMinutes.ts  merge_licenses.py  nextMeetingDate.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  result_parser.py  test_extract_entity.py  tsconfig.json  uc?export=download&id=1UhcS_UqlbNBRe2OO23O2ENwcfs5wz8Wi  updateLastProcessedDate.ts  validateLicenseData.ts  view?usp=drive_link
scripts/__tests__/unit/: test_boston_address_parser.py
scripts/archive/: load_data.py
scripts/tests/: test_result_parser.py
(+108 files in other folders)
