[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

# -----------------------------
# Ruff (linting + import sorting)
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "its_", "they_", "and_", "but_"]
norecursedirs = [".git", "node_modules", "archive"]
filterwarnings = ["error"]
