[project]
name = "licensing-board-finetune"
version = "0.1.0"
description = "Finetuning pipeline for Boston Licensing Board hearings, notices, and minutes"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "python-dateutil>=2.9.0",
    "tabulate>=0.9.0",
    "jinja2>=3.1.2",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.32.4.20260107",
]

# -----------------------------
# Ruff (linting + import sorting)
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# -----------------------------
# Mypy (typing)
# -----------------------------
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true


